# ugc_sprint_2

./: .gitignore  .pre-commit-config.yaml  Dockerfile_API  Dockerfile_UGC_API  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  setup.cfg
.github/workflows/: main.yml
app/clickhouse/: sql.py
app/fastapi_app/: constants.py  exeptions.py  main.py
app/fastapi_app/api/: api_router.py
app/fastapi_app/api/v1/: v1_router.py
app/fastapi_app/api/v1/metrics/: metrics_router.py
app/fastapi_app/api/v1/ugc/: ugc_router.py
app/fastapi_app/schemas/api/v1/: schemas.py
app/fastapi_app/schemas/services/: metric_schemas.py
app/fastapi_app/services/: base.py
app/fastapi_app/services/auth/: auth_service.py
app/fastapi_app/services/metrics/: metric_service.py
app/fastapi_app/services/repositories/mongo/: models.py  mongodb.py
app/fastapi_app/services/ugc/: ugc_service.py
app/fastapi_app/settings/: config.py  logging_utils.py  logs.py
app/kafka/producers/: kafka_producer.py
app/ugc_app/: main.py
app/ugc_app/api/: api_router.py
app/ugc_app/api/v1/: v1_router.py
app/ugc_app/api/v1/ugc/: ugc_router.py
app/ugc_app/services/ugc/: ugc_service.py
app/ugc_app/settings/: config.py  logs.py
infra/filebeat/: filebeat.yml
infra/logstash/: logstash.conf
infra/mongodb/: mongo-init.js
infra/nginx/: app.conf  fastapi_app.conf
infra_configs/nginx/: fastapi_app.conf
nginx/: nginx.conf
research/: README.md  comparison_script.py  mongo_population.py  performance_comparison_report.txt  postgres_population.py
(+2 files in other folders)
